--- a/.coveralls.yml
+++ b/.coveralls.yml
@@ -1,3 +1,4 @@
+# for php-coveralls
 service_name: php-coveralls
-coverage_clover: tests/_output/coverage.xml
+coverage_clover: tests/_output/*-coverage.xml
 json_path: tests/_output/coveralls-upload.json
