--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -97,7 +97,6 @@ jobs:
         env:
           WP_VERSION: ${{ matrix.wordpress }}
           PHP_VERSION: ${{ matrix.php }}
-          COVERAGE: ${{ matrix.coverage }}
 
       - name: Start test environment
         run: |
@@ -105,7 +104,7 @@ jobs:
 
           CONTAINER_ID=$(docker compose ps -q wordpress)
           if [ -n "$CONTAINER_ID" ]; then
-            docker exec -e COVERAGE=${COVERAGE:-} $CONTAINER_ID init-docker.sh
+            docker exec $CONTAINER_ID init-docker.sh
           else
             echo "Error: WordPress container not found."
             exit 1
@@ -113,14 +112,11 @@ jobs:
         env:
           WP_VERSION: ${{ matrix.wordpress }}
           PHP_VERSION: ${{ matrix.php }}
-          COVERAGE: ${{ matrix.coverage }}
 
       - name: Run Acceptance Tests w/ Docker
         run: |  
           if [ "${{ matrix.extensions }}" = "true" ]; then
             docker exec \
-              --env COVERAGE=${{ env.COVERAGE }} \
-              --env USING_XDEBUG=${{ env.USING_XDEBUG }} \
               --env DEBUG=${{ env.DEBUG }} \
               --env SKIP_TESTS_CLEANUP=${{ env.SKIP_TESTS_CLEANUP }} \
               --env SUITES=${{ env.SUITES }} \
@@ -128,8 +124,6 @@ jobs:
               bash -c "cd wp-content/plugins/wp-graphql-headless-login && bin/run-codeception.sh"
           fi
         env:
-          COVERAGE: ${{ matrix.coverage }}
-          USING_XDEBUG: ${{ matrix.coverage }}
           DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG || matrix.debug }}
           SKIP_TESTS_CLEANUP: 'true'
           SUITES: acceptance
@@ -137,16 +131,12 @@ jobs:
       - name: Run Functional Tests w/ Docker
         run: |
           docker exec \
-            --env COVERAGE=${{ env.COVERAGE }} \
-            --env USING_XDEBUG=${{ env.USING_XDEBUG }} \
             --env DEBUG=${{ env.DEBUG }} \
             --env SKIP_TESTS_CLEANUP=${{ env.SKIP_TESTS_CLEANUP }} \
             --env SUITES=${{ env.SUITES }} \
             $(docker compose ps -q wordpress) \
             bash -c "cd wp-content/plugins/wp-graphql-headless-login && bin/run-codeception.sh"
         env:
-          COVERAGE: ${{ matrix.coverage }}
-          USING_XDEBUG: ${{ matrix.coverage }}
           DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG || matrix.debug }}
           SKIP_TESTS_CLEANUP: 'true'
           SUITES: functional
@@ -170,13 +160,20 @@ jobs:
         if: ${{ matrix.coverage == 1 }}
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: vendor/bin/php-coveralls -v
+        run: |
+          docker exec $(docker compose ps -q wordpress) bash -c "git config --global --add safe.directory /var/www/html/wp-content/plugins/wp-graphql-headless-login"
+          docker exec \
+            --env COVERALLS_REPO_TOKEN=${{ secrets.GITHUB_TOKEN }} \
+            --env COVERALLS_RUN_LOCALLY=1 \
+            $(docker compose ps -q wordpress) \
+            bash -c "COVERALLS_RUN_LOCALLY=1 cd wp-content/plugins/wp-graphql-headless-login && vendor/bin/php-coveralls -v"
 
       - name: Push CodeCoverage to CodeClimate
         if: ${{ matrix.coverage == 1 }}
-        uses: paambaati/codeclimate-action@v5
+        uses: paambaati/codeclimate-action@v9
         env:
           CC_TEST_REPORTER_ID: f775c7e015158d3505156743f180c5b6a4fecb372c63f682cfcd2c7d32ae23cc
         with:
           coverageLocations: |
             ${{github.workspace}}/tests/_output/*.xml:clover
+          prefix: '/var/www/html/wp-content/plugins/wp-graphql-headless-login'
