--- a/.github/workflows/integration-testing.yml
+++ b/.github/workflows/integration-testing.yml
@@ -29,20 +29,12 @@ jobs:
     strategy:
       matrix:
         php: ["8.2", "8.1", "8.0"]
-        wordpress: ["6.6", "6.5", "6.4", "6.3", "6.2", "6.1", "6.0" ]
+        wordpress: ["6.6", "6.5", "6.4", "6.3", "6.2"]
         include:
           - php: "8.2"
             wordpress: "6.6"
             coverage: 1
-          # Test old versions against PHP 8.0
-          - php: "7.4"
-            wordpress: "6.1"
-          - php: "7.4"
-            wordpress: "6.0"
         exclude:
-          # Old WP versions that dont support newer PHP versions
-          - php: "8.2"
-            wordpress: "6.0"
           # New WP versions that dont support older PHP versions
           - php: "8.0"
             wordpress: "6.6"
