--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -15,6 +15,10 @@ parameters:
 		reportAlwaysTrueInLastCondition: true
 		reportStaticMethodSignatures: true
 		reportWrongPhpDocTypeInVarTag: true
+		dynamicConstantNames:
+			- ADMIN_COOKIE_PATH
+			- COOKIEPATH
+			- SITECOOKIEPATH
 		bootstrapFiles:
 			- phpstan/constants.php
 		paths:
