--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -2,13 +2,9 @@ parameters:
 		level: 8
 		treatPhpDocTypesAsCertain: false
 		inferPrivatePropertyTypeFromConstructor: true
-		checkAlwaysTrueCheckTypeFunctionCall: true
-		checkAlwaysTrueInstanceof: true
-		checkAlwaysTrueStrictComparison: true
 		checkExplicitMixedMissingReturn: true
 		checkFunctionNameCase: true
 		checkInternalClassCaseSensitivity: true
-		checkMissingIterableValueType: true
 		checkTooWideReturnTypesInProtectedAndPublicMethods: true
 		polluteScopeWithAlwaysIterableForeach: false
 		polluteScopeWithLoopInitialAssignments: false
@@ -17,6 +13,10 @@ parameters:
 		reportWrongPhpDocTypeInVarTag: true
 		bootstrapFiles:
 			- phpstan/constants.php
+		dynamicConstantNames:
+			- ADMIN_COOKIE_PATH
+			- COOKIEPATH
+			- SITECOOKIEPATH
 		paths:
 			- wp-graphql-headless-login.php
 			- access-functions.php
