--- a/.github/workflows/codeception.yml
+++ b/.github/workflows/codeception.yml
@@ -1,4 +1,4 @@
-name: Integration Testing
+name: Codeception Testing
 
 on:
   push:
@@ -10,9 +10,14 @@ on:
       - develop
       - main
     paths:
+      - '.github/workflows/codeception.yml'
       - '**.php'
-      - '.github/workflows/*.yml'
-      - '!docs/**'
+      - '.docker/**'
+      - 'bin/**'
+      - 'build/**'
+      - 'composer.json'
+      - 'composer.lock'
+      - 'docker-compose.yml'
 
 # Cancel previous workflow run groups that have not completed.
 concurrency:
@@ -121,6 +126,7 @@ jobs:
           DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG || matrix.debug }}
           SKIP_TESTS_CLEANUP: 'true'
           SUITES: acceptance
+        continue-on-error: true
 
       - name: Run Functional Tests w/ Docker
         run: |
@@ -134,6 +140,7 @@ jobs:
           DEBUG: ${{ secrets.ACTIONS_STEP_DEBUG || matrix.debug }}
           SKIP_TESTS_CLEANUP: 'true'
           SUITES: functional
+        continue-on-error: true
 
       - name: Run WPUnit Tests w/ Docker
         run: |
