--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ node_modules
 
 # Built assets - enable once this is on wpackagist
 # build
+build/tsconfig.tsbuildinfo
 
 # Generated Schema used in some tooling. Versioned Schema is uploaded as a Release artifact to Github.
 schema.graphql
