--- a/.phpcs.xml.dist
+++ b/.phpcs.xml.dist
@@ -25,7 +25,7 @@
 	<arg name="cache" value="tests/_output/cache.json" />
 	<!-- Enables parallel processing when available for faster results. -->
 	<arg name="parallel" value="20"/>
-<!-- Set severity to 1 to see everything that isn't effectively turned off. -->
+	<!-- Set severity to 1 to see everything that isn't effectively turned off. -->
 	<arg name="severity" value="1" />
 
 	<!-- Ruleset Config: set these to match your project constraints-->
@@ -44,19 +44,27 @@
 
 	<!-- Rules: WPGraphQL Coding Standards -->
 	<!-- https://github.com/AxeWP/WPGraphQL-Coding-Standards/WPGraphQL/ruleset.xml -->
-	<rule ref="WPGraphQL" />
+	<rule ref="WPGraphQL">
+		<!-- @todo remove after PHPCS v4-->
+		<exclude name="WordPressVIPMinimum.JS" />
+		<exclude name="Generic.Functions.CallTimePassByReference" />
+	</rule>
 
 	<!-- Individual rule configuration -->
 	<rule ref="WordPress.NamingConventions.PrefixAllGlobals">
 		<properties>
-			<!-- Value: replace the function, class, and variable prefixes used. Separate multiple prefixes with a comma. -->
-			<property name="prefixes" type="array" value="WPGraphQL\Login, graphql_login, WPGRAPHQL_LOGIN" />
+			<property name="prefixes" type="array">
+				<element value="WPGraphQL\Login" />
+				<element value="graphql_login" />
+				<element value="WPGRAPHQL_LOGIN" />
+			</property>
 		</properties>
 	</rule>
 	<rule ref="WordPress.WP.I18n">
 		<properties>
-			<!-- Value: replace the text domain used. -->
-			<property name="text_domain" type="array" value="wp-graphql-headless-login"/>
+			<property name="text_domain" type="array">
+				<element value="wp-graphql-headless-login"/>
+			</property>	
 		</properties>
 	</rule>
 
