--- a/.github/workflows/codeception.yml
+++ b/.github/workflows/codeception.yml
@@ -34,13 +34,15 @@ jobs:
     strategy:
       matrix:
         php: ["8.2", "8.1", "8.0"]
-        wordpress: ["6.7", "6.6", "6.5", "6.4", "6.3", "6.2"]
+        wordpress: ["6.8","6.7", "6.6", "6.5", "6.4", "6.3", "6.2"]
         include:
           - php: "8.2"
-            wordpress: "6.7"
+            wordpress: "6.8"
             coverage: 1
         exclude:
           # New WP versions that dont support older PHP versions
+          - php: "8.0"
+            wordpress: "6.8"
           - php: "8.0"
             wordpress: "6.7"
           - php: "8.0"
