chore: update npm deps

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
 		"analyze-bundles": "npm run build --webpack-bundle-analyzer",
 		"build": "rimraf build/* && cross-env BABEL_ENV=default NODE_ENV=production webpack",
 		"build:check-assets": "rimraf build/* && cross-env ASSET_CHECK=true BABEL_ENV=default NODE_ENV=production webpack",
-		"dev": "rimraf build/* && cross-env BABEL_ENV=default webpack",
+		"dev": "rimraf build/* && cross-env BABEL_ENV=default NODE_ENV=development webpack",
 		"lint": "npm run lint:php && npm run lint:css && npm run lint:js",
 		"lint:css": "stylelint '**/*.scss'",
 		"lint:css-fix": "stylelint '**/*.scss' --fix",
@@ -62,20 +62,20 @@
 		"clsx": "^2.1.1"
 	},
 	"devDependencies": {
-		"@babel/cli": "^7.27.0",
-		"@babel/core": "^7.26.10",
-		"@babel/plugin-syntax-jsx": "^7.25.9",
+		"@babel/cli": "^7.27.2",
+		"@babel/core": "^7.27.4",
+		"@babel/plugin-syntax-jsx": "^7.27.1",
 		"@svgr/webpack": "^8.1.0",
-		"@typescript-eslint/eslint-plugin": "^8.28.0",
-		"@typescript-eslint/parser": "^8.28.0",
-		"@wordpress/babel-plugin-import-jsx-pragma": "^5.21.0",
-		"@wordpress/babel-preset-default": "^8.21.0",
-		"@wordpress/env": "^10.21.0",
-		"@wordpress/eslint-plugin": "^22.7.0",
-		"@wordpress/prettier-config": "^4.21.0",
-		"@wordpress/readable-js-assets-webpack-plugin": "^3.21.0",
-		"@wordpress/scripts": "^30.14.0",
-		"@wordpress/stylelint-config": "^23.13.0",
+		"@typescript-eslint/eslint-plugin": "^8.33.1",
+		"@typescript-eslint/parser": "^8.33.1",
+		"@wordpress/babel-plugin-import-jsx-pragma": "^5.25.0",
+		"@wordpress/babel-preset-default": "^8.25.0",
+		"@wordpress/env": "^10.25.0",
+		"@wordpress/eslint-plugin": "^22.11.0",
+		"@wordpress/prettier-config": "^4.25.0",
+		"@wordpress/readable-js-assets-webpack-plugin": "^3.25.0",
+		"@wordpress/scripts": "^30.18.0",
+		"@wordpress/stylelint-config": "^23.17.0",
 		"babel-loader": "^9.2.1",
 		"babel-plugin-inline-json-import": "^0.3.2",
 		"cross-env": "^7.0.3",
@@ -87,16 +87,16 @@
 		"rimraf": "^6.0.1",
 		"terser-webpack-plugin": "^5.3.14",
 		"tsconfig-paths-webpack-plugin": "^4.2.0",
-		"typescript": "^5.8.2",
+		"typescript": "^5.8.3",
 		"url-loader": "^4.1.1",
-		"webpack": "^5.98.0",
+		"webpack": "^5.99.9",
 		"webpack-bundle-analyzer": "^4.10.2",
 		"webpack-cli": "^5.1.4"
 	},
 	"overrides": {
 		"react": "18.3.0",
 		"react-dom": "18.3.0",
-		"@typescript-eslint/eslint-plugin": "^8.28.0",
-		"@typescript-eslint/parser": "^8.28.0"
+		"@typescript-eslint/eslint-plugin": "^8.33.1",
+		"@typescript-eslint/parser": "^8.33.1"
 	}
 }
